POST Request route - Models for machines
